homework/fifth/assignment5.css
/* ---------------------------------- */
/* Global Styles */
/* ---------------------------------- */

html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

body {
  overflow: hidden;
  font-family: Raleway, Arial, sans-serif;
}

*:focus {
    outline: 0;
}


/* ---------------------------------- */
/* Canvas */
/* ---------------------------------- */

canvas {
  width: 100vw; /* "view-width" units */
  height: 100vw;
  position: fixed;
  top: 0;
  left: 0;
  z-index: -1; /* Place the canvas behind any controls */
  cursor: pointer;
}


/* ---------------------------------- */
/* Side Controls */
/* ---------------------------------- */

.side-controls {
  position: fixed;
  top: 0;
  right: 0;
  width: 400px;
  height: 100%;
  padding: 15px;
  background: #191919;
  color: #fff;
  cursor: default;
  overflow-y: scroll;
}

.multi-group .radio-form-group {
  margin-bottom: 10px;
}

.multi-group .form-group {
  margin-bottom: 5px;
}

.control-group {
  margin-bottom: 10px;
  padding: 15px;
  border: 1px solid #000;
  border-radius: 3px;
  background: #333333;
  -webkit-box-shadow: 5px 5px 15px 0px rgba(25,25,25,1);
     -moz-box-shadow: 5px 5px 15px 0px rgba(25,25,25,1);
          box-shadow: 5px 5px 15px 0px rgba(25,25,25,1);
}

.group-header {
  margin-bottom: 10px;
}

.group-header h4 {
  color: #CCCCCC;
  text-transform: uppercase;
  letter-spacing: 1px;
}

button:hover,
input:hover {
  cursor: pointer;
}

.form-group label{
  display: inline-block;
  width: 50px;
}


/* ---------------------------------- */
/* Button */
/* ---------------------------------- */

button {
  margin-right: 3px;
  padding: 3px;
  border-radius: 5px;
  background: #FBFBFB;
  outline: none;
  border: solid 1px transparent;
  transition: box-shadow 0.5s;
  transition: background 0.5s;
}

button:hover {
  background: #9A9A9A;
  -webkit-box-shadow: 5px 5px 15px 0px rgba(25,25,25,1);
     -moz-box-shadow: 5px 5px 15px 0px rgba(25,25,25,1);
          box-shadow: 5px 5px 15px 0px rgba(25,25,25,1);
}

.radio-label {
  display: inline-block;
  margin-left: 1px;
  margin-right: 8px;
}

/* ---------------------------------- */
/* Slider */
/* ---------------------------------- */

/* http://brennaobrien.com/blog/2014/05/style-input-type-range-in-every-browser.html */
input[type=range] {
  /*removes default webkit styles*/
  -webkit-appearance: none;

  /*fix for FF unable to apply focus style bug */
  border: 1px solid rgba(81, 78, 78, 1);

  /*required for proper track sizing in FF*/
  width: 180px;
}
input[type=range]::-webkit-slider-runnable-track {
  width: 180px;
  height: 5px;
  background: #ddd;
  border: none;
  border-radius: 3px;
}
input[type=range]::-webkit-slider-thumb {
  -webkit-appearance: none;
  border: none;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  background: rgba(71, 82, 214, 1);
  margin-top: -4px;
}
input[type=range]:focus {
  outline: none;
}
input[type=range]:focus::-webkit-slider-runnable-track {
  background: #ccc;
}

input[type=range]::-moz-range-track {
  width: 180px;
  height: 5px;
  background: #ddd;
  border: none;
  border-radius: 3px;
}
input[type=range]::-moz-range-thumb {
  border: none;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  background: rgba(71, 82, 214, 1);
}

/*hide the outline behind the border*/
input[type=range]:-moz-focusring{
  outline: 1px solid rgba(81, 78, 78, 1);
  outline-offset: -1px;
}

input[type=range]::-ms-track {
  width: 180px;
  height: 5px;

  /*remove bg colour from the track, we'll use ms-fill-lower and ms-fill-upper instead */
  background: transparent;

  /*leave room for the larger thumb to overflow with a transparent border */
  border-color: transparent;
  border-width: 6px 0;

  /*remove default tick marks*/
  color: transparent;
}
input[type=range]::-ms-fill-lower {
  background: #777;
  border-radius: 10px;
}
input[type=range]::-ms-fill-upper {
  background: #ddd;
  border-radius: 10px;
}
input[type=range]::-ms-thumb {
  border: none;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  background: rgba(71, 82, 214, 1);
}
input[type=range]:focus::-ms-fill-lower {
  background: #888;
}
input[type=range]:focus::-ms-fill-upper {
  background: #ccc;
}

input[type="range"]:disabled {
  background: rgb(219, 149, 221);
  opacity: 0.2;
}


/* ---------------------------------- */
/* Utilities */
/* ---------------------------------- */

.icon {
  margin-right: 10px;
}


/* ---------------------------------- */
/* Messaging */
/* ---------------------------------- */

.message {
  position: absolute;
  top: 10px;
  right: 410px;
  width: 260px;
  height: 80px;
  color: #CCCCCC;
  font-weight: 600;
  font-size: 20px;
  line-height: 1.2;
}


/* ---------------------------------- */
/* Loading indicator */
/* ---------------------------------- */

.loading {
  position: absolute;
  top: 100px;
  left: 200px;
  color: #CCCCCC;
  opacity: 0;
  transition: opacity 0.5s;
}

.loading.active {
  opacity: 1;
}


/* ---------------------------------- */
/* Nav */
/* ---------------------------------- */

nav {
  position: absolute;
  top: 0;
  left: -240px;
  width: 240px;
  height: 100%;
  background: #CECCCC;
  cursor: default;
  transition: left 0.5s;
}

nav.active {
  left: 0;
}

nav li {
  width: 80%;
}

nav a {
  display: block;
  margin: 10px;
  padding: 15px;
  text-transform: uppercase;
  text-decoration: none;
  color: #4D4946;
  transition: background 0.5s;
}

nav a:hover {
  background: #9D6381;
  color: #CECCCC;
  border-radius: 4px;
}

nav .close {
  float: right;
  margin-top: 5px;
  margin-right: 5px;
  color: #4D4946;
}

.nav-icon:hover {
  cursor: pointer;
  color: #363331;
}


/* ---------------------------------- */
/* Nav collapse */
/* ---------------------------------- */

.nav-collapse {
  color: #CCCCCC;
  opacity: 1;
  transition: opacity 0.5s;
}

.nav-collapse.hide {
  opacity: 0;
}

.nav-collapse:hover {
  cursor: pointer;
  color: #fff;
}

